--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -16,49 +16,25 @@
             <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
             <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
+        <style>
+            /*.layui-input-inline{*/
+            /*    width: 888px!important;*/
+            /*}*/
+        </style>
     </head>
     <body>
         <div class="layui-fluid">
-            <div class="layui-row" th:switch="${type}">
-                <form class="layui-form" th:case="'tbtj'">
-                  <div class="layui-form-item">
-                      <label for="username" class="layui-form-label">
-                          <span class="x-red">*</span>标题
-                      </label>
-                      <div class="layui-input-inline">
-                          <input type="text" id="username" name="username" required="" lay-verify="required"
-                          autocomplete="off" class="layui-input">
-                      </div>
-                      <div class="layui-form-mid layui-word-aux">
-                          <span class="x-red">*</span>特别推介标题
-                      </div>
-                  </div>
-                  <div class="layui-form-item">
-                      <label for="phone" class="layui-form-label">
-                          <span class="x-red">*</span>链接地址
-                      </label>
-                      <div class="layui-input-inline">
-                          <input type="text" id="phone" name="phone" required="" lay-verify="phone"
-                          autocomplete="off" class="layui-input">
-                      </div>
-                      <div class="layui-form-mid layui-word-aux">
-                          <span class="x-red">*</span>特别推介链接地址
-                      </div>
-                  </div>
-                  <div class="layui-form-item">
-                      <button  class="layui-btn" lay-filter="add" lay-submit="">
-                          增加
-                      </button>
-                  </div>
-              </form>
 
-                <form class="layui-form" th:case="'yhkx'">
+            <div class="layui-row" th:switch="${type}">
+                <!--                特别推介表单-->
+                <form class="layui-form" th:case="'tbtj'">
+                    <input name="ywkey" th:value="${ywkey}">
                     <div class="layui-form-item">
-                        <label for="username" class="layui-form-label">
-                            <span class="x-red">*</span>标题111
+                        <label for="tbtjbt" class="layui-form-label">
+                            <span class="x-red">*</span>标题
                         </label>
                         <div class="layui-input-inline">
-                            <input type="text" id="username" name="username" required="" lay-verify="required"
+                            <input type="text" id="tbtjbt" name="tbtjbt" required="" lay-verify="required"
                                    autocomplete="off" class="layui-input">
                         </div>
                         <div class="layui-form-mid layui-word-aux">
@@ -66,11 +42,11 @@
                         </div>
                     </div>
                     <div class="layui-form-item">
-                        <label for="phone" class="layui-form-label">
+                        <label for="tbtjurl" class="layui-form-label">
                             <span class="x-red">*</span>链接地址
                         </label>
                         <div class="layui-input-inline">
-                            <input type="text" id="phone" name="phone" required="" lay-verify="phone"
+                            <input type="text" id="tbtjurl" name="tbtjurl" required="" lay-verify="phone"
                                    autocomplete="off" class="layui-input">
                         </div>
                         <div class="layui-form-mid layui-word-aux">
@@ -83,13 +59,174 @@
                         </button>
                     </div>
                 </form>
+                <!--                优惠快讯表单-->
+                <form class="layui-form" th:case="'yhkx'">
+                    <input name="ywkey" th:value="${ywkey}">
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">
+                            <span class="x-red">*</span>所在分类
+                        </label>
+                        <div class="layui-input-inline">
+                        <select name="yhkxlx" lay-filter="yhkxlx">
+                            <option value=""></option>
+                            <option value="0">一卡通</option>
+                            <option value="1" selected="">信用卡</option>
+                        </select>
+                    </div>
+                        <div class="layui-form-mid layui-word-aux">
+                            <span class="x-red">*</span>优惠快讯分类
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label for="yhkxbt" class="layui-form-label">
+                            <span class="x-red">*</span>标题
+                        </label>
+                        <div class="layui-input-inline">
+                            <input type="text" id="yhkxbt" name="yhkxbt" required="" lay-verify="required"
+                                   autocomplete="off" class="layui-input">
+                        </div>
+                        <div class="layui-form-mid layui-word-aux">
+                            <span class="x-red">*</span>优惠快讯标题
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">
+                            <span class="x-red">*</span>图片上传
+                        </label>
+                        <div class="layui-input-inline">
+                            <button type="button" class="layui-btn layui-btn-danger" id="test7"><i class="layui-icon"></i>上传图片</button>
+                        </div>
+                        <div class="layui-form-mid layui-word-aux">
+                            <span class="x-red">*</span>优惠快讯图片宣传
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <button  class="layui-btn" lay-filter="add" lay-submit="">
+                            增加
+                        </button>
+                    </div>
+                </form>
+                <!--                重要公告表单-->
+                <form class="layui-form" th:case="'zygg'">
+                    <input name="ywkey" th:value="${ywkey}">
+                    <div class="layui-form-item">
+                        <label for="zyggbt" class="layui-form-label">
+                            <span class="x-red">*</span>标题
+                        </label>
+                        <div class="layui-input-inline">
+                            <input type="text" id="zyggbt" name="zyggbt" required="" lay-verify="required"
+                                   autocomplete="off" class="layui-input">
+                        </div>
+                        <div class="layui-form-mid layui-word-aux">
+                            <span class="x-red">*</span>重要公告标题
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label for="zyggzw" class="layui-form-label">
+                            <span class="x-red">*</span>正文内容
+                        </label>
+                        <div class="layui-input-inline">
+                            <textarea id="zyggzw" name="zyggzw" required="" lay-verify="phone"
+                                      autocomplete="off" class="layui-textarea"></textarea>
+                        </div>
+                        <div class="layui-form-mid layui-word-aux">
+                            <span class="x-red">*</span>重要公告正文内容
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <button  class="layui-btn" lay-filter="add" lay-submit="">
+                            增加
+                        </button>
+                    </div>
+                </form>
+                <!--                招行公告表单-->
+                <form class="layui-form" th:case="'zygg'">
+                    <input name="ywkey" th:value="${ywkey}">
+                    <div class="layui-form-item">
+                        <label for="zyggbt" class="layui-form-label">
+                            <span class="x-red">*</span>标题
+                        </label>
+                        <div class="layui-input-inline">
+                            <input type="text" id="zyggbt" name="zyggbt" required="" lay-verify="required"
+                                   autocomplete="off" class="layui-input">
+                        </div>
+                        <div class="layui-form-mid layui-word-aux">
+                            <span class="x-red">*</span>重要公告标题
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label for="zyggzw" class="layui-form-label">
+                            <span class="x-red">*</span>正文内容
+                        </label>
+                        <div class="layui-input-inline">
+                            <textarea id="zyggzw" name="zyggzw" required="" lay-verify="phone"
+                                      autocomplete="off" class="layui-textarea"></textarea>
+                        </div>
+                        <div class="layui-form-mid layui-word-aux">
+                            <span class="x-red">*</span>重要公告正文内容
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <button  class="layui-btn" lay-filter="add" lay-submit="">
+                            增加
+                        </button>
+                    </div>
+                </form>
+                <!--                招行新闻表单-->
+                <form class="layui-form" th:case="'zygg'">
+                    <input name="ywkey" th:value="${ywkey}">
+                    <div class="layui-form-item">
+                        <label for="zyggbt" class="layui-form-label">
+                            <span class="x-red">*</span>标题
+                        </label>
+                        <div class="layui-input-inline">
+                            <input type="text" id="zyggbt" name="zyggbt" required="" lay-verify="required"
+                                   autocomplete="off" class="layui-input">
+                        </div>
+                        <div class="layui-form-mid layui-word-aux">
+                            <span class="x-red">*</span>重要公告标题
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label for="zyggzw" class="layui-form-label">
+                            <span class="x-red">*</span>正文内容
+                        </label>
+                        <div class="layui-input-inline">
+                            <textarea id="zyggzw" name="zyggzw" required="" lay-verify="phone"
+                                      autocomplete="off" class="layui-textarea"></textarea>
+                        </div>
+                        <div class="layui-form-mid layui-word-aux">
+                            <span class="x-red">*</span>重要公告正文内容
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <button  class="layui-btn" lay-filter="add" lay-submit="">
+                            增加
+                        </button>
+                    </div>
+                </form>
             </div>
         </div>
         <script th:inline="javascript">
             var type = [[${type}]];
+            var ywkey = [[${ywkey}]];
             var url = type+"Add";
         </script>
-        <script >layui.use(['form', 'layer'],
+        <script >
+            layui.use('upload', function(){
+            var $ = layui.jquery,upload = layui.upload;
+            //设定文件大小限制
+            var uploadInst = upload.render({
+                elem: '#test7'
+                ,url: 'file/uploadFile?ywkey='+ywkey+"&path="+type //改成您自己的上传接口
+                ,size: 6000 //限制文件大小，单位 KB
+                ,done: function(res){
+                    layer.msg(res.msg);
+                }
+            });
+            });
+
+            layui.use(['form', 'layer'],
             function() {
                 $ = layui.jquery;
                 var form = layui.form,
@@ -121,8 +258,7 @@
                     function() {
                         //关闭当前frame
                         xadmin.close();
-
-                        // 可以对父窗口进行刷新 
+                        // 可以对父窗口进行刷新
                         xadmin.father_reload();
                     });
                     return false;
