--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -78,17 +78,17 @@
                 <ul id="nav">
                     <li>
                         <a href="javascript:;">
-                            <i class="iconfont left-nav-li" lay-tips="会员管理">&#xe6b8;</i>
+                            <i class="iconfont left-nav-li" lay-tips="特别推介管理">&#xe6b8;</i>
                             <cite>特别推介管理</cite>
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a onclick="xadmin.add_tab('统计页面','/xxlr?type=tbtj')">
+                                <a onclick="xadmin.add_tab('特别推介信息录入','/xxlr?type=tbtj')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>录入</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('会员列表(静态表格)','member-list.html')">
+                                <a onclick="xadmin.add_tab('特别推介信息查看','member-list.html')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>查看</cite></a>
                             </li>
@@ -96,17 +96,17 @@
                     </li>
                     <li>
                         <a href="javascript:;">
-                            <i class="iconfont left-nav-li" lay-tips="订单管理">&#xe723;</i>
+                            <i class="iconfont left-nav-li" lay-tips="优惠快讯管理">&#xe723;</i>
                             <cite>优惠快讯管理</cite>
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a onclick="xadmin.add_tab('订单列表','/xxlr?type=yhkx')">
+                                <a onclick="xadmin.add_tab('优惠快讯信息录入','/xxlr?type=yhkx')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>录入</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('订单列表1','order-list1.html')">
+                                <a onclick="xadmin.add_tab('优惠快讯信息查看','order-list1.html')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>查看</cite></a>
                             </li>
@@ -114,17 +114,17 @@
                     </li>
                     <li>
                         <a href="javascript:;">
-                            <i class="iconfont left-nav-li" lay-tips="分类管理">&#xe723;</i>
-                            <cite>重要公告</cite>
+                            <i class="iconfont left-nav-li" lay-tips="重要公告管理">&#xe723;</i>
+                            <cite>重要公告管理</cite>
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a onclick="xadmin.add_tab('订单列表','/xxlr?type=zygg')">
+                                <a onclick="xadmin.add_tab('重要公告信息录入','/xxlr?type=zygg')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>录入</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('订单列表1','order-list1.html')">
+                                <a onclick="xadmin.add_tab('重要公告信息查看','order-list1.html')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>查看</cite></a>
                             </li>
@@ -145,17 +145,17 @@
                     </li>
                     <li>
                         <a href="javascript:;">
-                            <i class="iconfont left-nav-li" lay-tips="管理员管理">&#xe726;</i>
+                            <i class="iconfont left-nav-li" lay-tips="招行新闻管理">&#xe726;</i>
                             <cite>招行新闻</cite>
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a onclick="xadmin.add_tab('订单列表','/xxlr?type=zhxw')">
+                                <a onclick="xadmin.add_tab('招行新闻录入','/xxlr?type=zhxw')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>录入</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('订单列表1','order-list1.html')">
+                                <a onclick="xadmin.add_tab('招行新闻查看','order-list1.html')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>查看</cite></a>
                             </li>
@@ -163,17 +163,17 @@
                     </li>
                     <li>
                         <a href="javascript:;">
-                            <i class="iconfont left-nav-li" lay-tips="系统统计">&#xe6ce;</i>
+                            <i class="iconfont left-nav-li" lay-tips="招行公告">&#xe6ce;</i>
                             <cite>招行公告</cite>
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a onclick="xadmin.add_tab('订单列表','/xxlr?type=zhgg')">
+                                <a onclick="xadmin.add_tab('招行公告录入','/xxlr?type=zhgg')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>录入</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('订单列表1','order-list1.html')">
+                                <a onclick="xadmin.add_tab('招行公告查看','order-list1.html')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>查看</cite></a>
                             </li>
