--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -17,9 +17,9 @@
             <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
         <style>
-            /*.layui-input-inline{*/
-            /*    width: 888px!important;*/
-            /*}*/
+            .layui-input-inline{
+                width: 888px!important;
+            }
         </style>
     </head>
     <body>
@@ -28,13 +28,13 @@
             <div class="layui-row" th:switch="${type}">
                 <!--                特别推介表单-->
                 <form class="layui-form" th:case="'tbtj'">
-                    <input name="ywkey" th:value="${ywkey}">
+                    <input name="id" th:value="${ywkey}">
                     <div class="layui-form-item">
                         <label for="tbtjbt" class="layui-form-label">
                             <span class="x-red">*</span>标题
                         </label>
                         <div class="layui-input-inline">
-                            <input type="text" id="tbtjbt" name="tbtjbt" required="" lay-verify="required"
+                            <input type="text" id="tbtjbt" name="bt" required="" lay-verify="required"
                                    autocomplete="off" class="layui-input">
                         </div>
                         <div class="layui-form-mid layui-word-aux">
@@ -46,7 +46,7 @@
                             <span class="x-red">*</span>链接地址
                         </label>
                         <div class="layui-input-inline">
-                            <input type="text" id="tbtjurl" name="tbtjurl" required="" lay-verify="phone"
+                            <input type="text" id="tbtjurl" name="url" required="" lay-verify="phone"
                                    autocomplete="off" class="layui-input">
                         </div>
                         <div class="layui-form-mid layui-word-aux">
@@ -61,13 +61,13 @@
                 </form>
                 <!--                优惠快讯表单-->
                 <form class="layui-form" th:case="'yhkx'">
-                    <input name="ywkey" th:value="${ywkey}">
+                    <input name="id" th:value="${ywkey}">
                     <div class="layui-form-item">
                         <label class="layui-form-label">
                             <span class="x-red">*</span>所在分类
                         </label>
                         <div class="layui-input-inline">
-                        <select name="yhkxlx" lay-filter="yhkxlx">
+                        <select name="pid" lay-filter="yhkxlx">
                             <option value=""></option>
                             <option value="0">一卡通</option>
                             <option value="1" selected="">信用卡</option>
@@ -82,7 +82,7 @@
                             <span class="x-red">*</span>标题
                         </label>
                         <div class="layui-input-inline">
-                            <input type="text" id="yhkxbt" name="yhkxbt" required="" lay-verify="required"
+                            <input type="text" id="yhkxbt" name="bt" required="" lay-verify="required"
                                    autocomplete="off" class="layui-input">
                         </div>
                         <div class="layui-form-mid layui-word-aux">
@@ -97,7 +97,7 @@
                             <button type="button" class="layui-btn layui-btn-danger" id="test7"><i class="layui-icon"></i>上传图片</button>
                         </div>
                         <div class="layui-form-mid layui-word-aux">
-                            <span class="x-red">*</span>优惠快讯图片宣传
+                            <span class="x-red">*</span>优惠快讯图片上传
                         </div>
                     </div>
                     <div class="layui-form-item">
@@ -108,13 +108,13 @@
                 </form>
                 <!--                重要公告表单-->
                 <form class="layui-form" th:case="'zygg'">
-                    <input name="ywkey" th:value="${ywkey}">
+                    <input name="id" th:value="${ywkey}">
                     <div class="layui-form-item">
                         <label for="zyggbt" class="layui-form-label">
                             <span class="x-red">*</span>标题
                         </label>
                         <div class="layui-input-inline">
-                            <input type="text" id="zyggbt" name="zyggbt" required="" lay-verify="required"
+                            <input type="text" id="zyggbt" name="bt" required="" lay-verify="required"
                                    autocomplete="off" class="layui-input">
                         </div>
                         <div class="layui-form-mid layui-word-aux">
@@ -126,7 +126,7 @@
                             <span class="x-red">*</span>正文内容
                         </label>
                         <div class="layui-input-inline">
-                            <textarea id="zyggzw" name="zyggzw" required="" lay-verify="phone"
+                            <textarea id="zyggzw" name="zw" required="" lay-verify="phone"
                                       autocomplete="off" class="layui-textarea"></textarea>
                         </div>
                         <div class="layui-form-mid layui-word-aux">
@@ -140,32 +140,32 @@
                     </div>
                 </form>
                 <!--                招行公告表单-->
-                <form class="layui-form" th:case="'zygg'">
-                    <input name="ywkey" th:value="${ywkey}">
+                <form class="layui-form" th:case="'zhgg'">
+                    <input name="id" th:value="${ywkey}">
                     <div class="layui-form-item">
-                        <label for="zyggbt" class="layui-form-label">
+                        <label for="zhggbt" class="layui-form-label">
                             <span class="x-red">*</span>标题
                         </label>
                         <div class="layui-input-inline">
-                            <input type="text" id="zyggbt" name="zyggbt" required="" lay-verify="required"
+                            <input type="text" id="zhggbt" name="bt" required="" lay-verify="required"
                                    autocomplete="off" class="layui-input">
                         </div>
                         <div class="layui-form-mid layui-word-aux">
-                            <span class="x-red">*</span>重要公告标题
+                            <span class="x-red">*</span>招行公告标题
                         </div>
                     </div>
                     <div class="layui-form-item">
-                        <label for="zyggzw" class="layui-form-label">
-                            <span class="x-red">*</span>正文内容
+                        <label class="layui-form-label">
+                            <span class="x-red">*</span>文件上传
                         </label>
                         <div class="layui-input-inline">
-                            <textarea id="zyggzw" name="zyggzw" required="" lay-verify="phone"
-                                      autocomplete="off" class="layui-textarea"></textarea>
+                            <button type="button" class="layui-btn" id="test7"><i class="layui-icon"></i>上传文件</button>
                         </div>
                         <div class="layui-form-mid layui-word-aux">
-                            <span class="x-red">*</span>重要公告正文内容
+                            <span class="x-red">*</span>招行公告文件上传
                         </div>
                     </div>
+
                     <div class="layui-form-item">
                         <button  class="layui-btn" lay-filter="add" lay-submit="">
                             增加
@@ -173,18 +173,18 @@
                     </div>
                 </form>
                 <!--                招行新闻表单-->
-                <form class="layui-form" th:case="'zygg'">
-                    <input name="ywkey" th:value="${ywkey}">
+                <form class="layui-form" th:case="'zhxw'">
+                    <input name="id" th:value="${ywkey}">
                     <div class="layui-form-item">
-                        <label for="zyggbt" class="layui-form-label">
+                        <label for="zhxwbt" class="layui-form-label">
                             <span class="x-red">*</span>标题
                         </label>
                         <div class="layui-input-inline">
-                            <input type="text" id="zyggbt" name="zyggbt" required="" lay-verify="required"
+                            <input type="text" id="zhxwbt" name="bt" required="" lay-verify="required"
                                    autocomplete="off" class="layui-input">
                         </div>
                         <div class="layui-form-mid layui-word-aux">
-                            <span class="x-red">*</span>重要公告标题
+                            <span class="x-red">*</span>招行新闻标题
                         </div>
                     </div>
                     <div class="layui-form-item">
@@ -192,11 +192,11 @@
                             <span class="x-red">*</span>正文内容
                         </label>
                         <div class="layui-input-inline">
-                            <textarea id="zyggzw" name="zyggzw" required="" lay-verify="phone"
+                            <textarea id="zhxwzw" name="zw" required="" lay-verify="required"
                                       autocomplete="off" class="layui-textarea"></textarea>
                         </div>
                         <div class="layui-form-mid layui-word-aux">
-                            <span class="x-red">*</span>重要公告正文内容
+                            <span class="x-red">*</span>招行新闻正文内容
                         </div>
                     </div>
                     <div class="layui-form-item">
@@ -218,7 +218,8 @@
             //设定文件大小限制
             var uploadInst = upload.render({
                 elem: '#test7'
-                ,url: 'file/uploadFile?ywkey='+ywkey+"&path="+type //改成您自己的上传接口
+                ,url: 'file/uploadFile?ywkey='+ywkey+"&path="+type
+                ,accept: 'file'
                 ,size: 6000 //限制文件大小，单位 KB
                 ,done: function(res){
                     layer.msg(res.msg);
@@ -226,11 +227,9 @@
             });
             });
 
-            layui.use(['form', 'layer'],
-            function() {
+            layui.use(['form', 'layer'], function() {
                 $ = layui.jquery;
-                var form = layui.form,
-                layer = layui.layer;
+                var form = layui.form, layer = layui.layer;
                 //自定义验证规则
                 form.verify({
                     nikename: function(value) {
@@ -249,22 +248,32 @@
                 //监听提交
                 form.on('submit(add)',
                 function(data) {
+                    $.ajax({
+                        type: "post",
+                        url: url,
+                        data: JSON.stringify(data.field),
+                        contentType:'application/json;charset=utf-8',
+                        dataType: "json",
+                        success: function(data){
+                            //发异步，把数据提交给php
+                            layer.alert("增加成功", {
+                                    icon: 6
+                                },
+                                function() {
+                                    //关闭当前frame
+                                    xadmin.close();
+                                    // 可以对父窗口进行刷新
+                                    xadmin.father_reload();
+                                });
+                        }
+                    });
                     console.log(type);
                     console.log(JSON.stringify(data.field));
-                    //发异步，把数据提交给php
-                    layer.alert("增加成功", {
-                        icon: 6
-                    },
-                    function() {
-                        //关闭当前frame
-                        xadmin.close();
-                        // 可以对父窗口进行刷新
-                        xadmin.father_reload();
-                    });
                     return false;
                 });
 
-            });</script>
+            });
+        </script>
         <script>var _hmt = _hmt || []; (function() {
                 var hm = document.createElement("script");
                 hm.src = "https://hm.baidu.com/hm.js?b393d153aeb26b46e9431fabaf0f6190";
