--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -88,7 +88,7 @@
                                     <cite>录入</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('特别推介信息查看','member-list.html')">
+                                <a onclick="xadmin.add_tab('特别推介信息查看','/getList?type=tbtj')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>查看</cite></a>
                             </li>
@@ -106,7 +106,7 @@
                                     <cite>录入</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('优惠快讯信息查看','order-list1.html')">
+                                <a onclick="xadmin.add_tab('优惠快讯信息查看','/getList?type=yhkx')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>查看</cite></a>
                             </li>
@@ -124,7 +124,7 @@
                                     <cite>录入</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('重要公告信息查看','order-list1.html')">
+                                <a onclick="xadmin.add_tab('重要公告信息查看','/getList?type=zygg')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>查看</cite></a>
                             </li>
@@ -150,12 +150,12 @@
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a onclick="xadmin.add_tab('招行新闻录入','/xxlr?type=zhxw')">
+                                <a onclick="xadmin.add_tab('招行新闻录入','/xxlr?type=zygg')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>录入</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('招行新闻查看','order-list1.html')">
+                                <a onclick="xadmin.add_tab('招行新闻查看','/getList?type=zygg')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>查看</cite></a>
                             </li>
@@ -173,7 +173,7 @@
                                     <cite>录入</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('招行公告查看','order-list1.html')">
+                                <a onclick="xadmin.add_tab('招行公告查看','/getList?type=zhgg')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>查看</cite></a>
                             </li>
