第四波更新 3/30 14：15

--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en"  class="x-admin-sm">
+<html xmlns:th="http://www.thymeleaf.org" lang="en"  class="x-admin-sm" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
     
     <head>
         <meta charset="UTF-8">
